[package]
name = "nano33iot_serial_rtic"
version = "0.1.0"
authors = ["nebelgrau77"]
description = "Board Support crate for the Arduino Nano 33 IOT"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino", "rtic", "adc", "tmp36", "sensor"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/atsamd-rs/atsamd"
readme = "README.md"
documentation = "https://atsamd-rs.github.io/atsamd/atsamd21g18a/arduino_nano33iot/"
edition = "2018"

[dependencies]
cortex-m = "~0.6"
embedded-hal = "~0.2.3"
nb = "~0.1"
atsamd-hal = {version = "~0.9", default-features = false}
cortex-m-rt = {version = "~0.6.12", optional = true}
panic-halt = {version = "~0.2", optional = true}
cortex-m-rtic = "~0.5.1"

[dependencies.arduino_nano33iot]
path = "custom_crate/arduino_nano33iot"
version = "0.2.1-alpha"


[features]
# ask the HAL to enable atsamd21g18a support
default = ["rt", "panic_halt", "atsamd-hal/samd21g18a"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g18a-rt"]
panic_halt = ["panic-halt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

